<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="2dp"
    tools:showIn="@layout/tauron_components_table">

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="20dp"
        android:paddingEnd="20dp"
        android:text="@string/tauron_energia_elektryczna"
        tools:ignore="RtlSymmetry"/>

    <TextView
        android:id="@+id/tv_meter_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="20dp"
        android:paddingEnd="20dp"
        tools:text="12345678"
        tools:ignore="RtlSymmetry"/>

    <TextView
        android:id="@+id/tv_prev_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:paddingRight="10dp"
        android:paddingEnd="10dp"
        tools:text="01.01.2015"
        tools:ignore="RtlSymmetry"/>

    <TextView
        android:id="@+id/tv_prev_reading"
        android:layout_width="wrap_content"
        android:minWidth="100dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:paddingRight="20dp"
        android:paddingEnd="20dp"
        tools:text="1"
        tools:ignore="RtlSymmetry"/>

    <TextView
        android:id="@+id/tv_curr_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:paddingRight="10dp"
        android:paddingEnd="10dp"
        tools:text="12.12.2015"
        tools:ignore="RtlSymmetry"/>

    <TextView
        android:id="@+id/tv_curr_reading"
        android:layout_width="wrap_content"
        android:minWidth="100dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:paddingRight="20dp"
        android:paddingEnd="20dp"
        tools:text="123456789"
        tools:ignore="RtlSymmetry"/>

    <TextView
        android:id="@+id/tv_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:paddingRight="20dp"
        android:paddingEnd="20dp"
        tools:text="1"
        tools:ignore="RtlSymmetry"/>

    <TextView
        android:id="@+id/tv_consumption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:paddingRight="20dp"
        android:paddingEnd="20dp"
        tools:text="2 339"
        tools:ignore="RtlSymmetry"/>

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:paddingRight="20dp"
        android:paddingEnd="20dp"
        tools:text="0,27150"
        tools:ignore="RtlSymmetry"/>

    <TextView
        android:id="@+id/tv_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        tools:text="401,05" />
</TableRow>