<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border_gray_bg"
        android:padding="2dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="20dp"
            android:paddingEnd="20dp"
            android:textStyle="bold"
            android:text="Podsumowanie zużycia"
            tools:ignore="HardcodedText,RtlSymmetry"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="7"
            android:gravity="end"
            android:paddingRight="20dp"
            android:paddingEnd="20dp"
            android:textStyle="bold"
            android:text="Netto[zł]"
            tools:ignore="HardcodedText,RtlSymmetry"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:paddingRight="20dp"
            android:paddingEnd="20dp"
            android:textStyle="bold"
            android:text="VAT[zł]"
            tools:ignore="HardcodedText,RtlSymmetry"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textStyle="bold"
            android:text="Brutto[zł]"
            tools:ignore="HardcodedText"/>

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="20dp"
            android:paddingEnd="20dp"
            android:text="w tym sprzedaż energii"
            tools:ignore="HardcodedText,RtlSymmetry"/>

        <TextView
            android:id="@+id/tv_sell_net"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="7"
            android:gravity="end"
            android:paddingRight="20dp"
            android:paddingEnd="20dp"
            tools:text="111.22"
            tools:ignore="RtlSymmetry"/>

        <TextView
            android:id="@+id/tv_sell_vat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:paddingRight="20dp"
            android:paddingEnd="20dp"
            tools:text="222.33"
            tools:ignore="RtlSymmetry"/>

        <TextView
            android:id="@+id/tv_sell_gross"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            tools:text="333.55" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="20dp"
            android:paddingEnd="20dp"
            android:text="w tym dystrybucja energii"
            tools:ignore="HardcodedText,RtlSymmetry"/>

        <TextView
            android:id="@+id/tv_distribute_net"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="7"
            android:gravity="end"
            android:paddingRight="20dp"
            android:paddingEnd="20dp"
            tools:text="111.22"
            tools:ignore="RtlSymmetry"/>

        <TextView
            android:id="@+id/tv_distribute_vat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:paddingRight="20dp"
            android:paddingEnd="20dp"
            tools:text="222.33"
            tools:ignore="RtlSymmetry"/>

        <TextView
            android:id="@+id/tv_distribute_gross"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            tools:text="333.55" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border_gray_bg"
        android:padding="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="20dp"
            android:paddingEnd="20dp"
            android:textStyle="bold"
            android:text="Razem"
            tools:ignore="HardcodedText,RtlSymmetry"/>

        <TextView
            android:id="@+id/tv_total_net_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="7"
            android:gravity="end"
            android:textStyle="bold"
            android:paddingRight="20dp"
            android:paddingEnd="20dp"
            tools:text="111.22"
            tools:ignore="RtlSymmetry"/>

        <TextView
            android:id="@+id/tv_total_vat_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textStyle="bold"
            android:paddingRight="20dp"
            android:paddingEnd="20dp"
            tools:text="222.33"
            tools:ignore="RtlSymmetry"/>

        <TextView
            android:id="@+id/tv_total_gross_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textStyle="bold"
            tools:text="333.55" />
    </TableRow>

</merge>