<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/tauron_bill" >

    <TableLayout
        android:id="@+id/t_components_table"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@id/tv_for_period">

        <include
            layout="@layout/tauron_components_table_header" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/underline" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Sprzedaż energii"
                tools:ignore="HardcodedText"/>
        </TableRow>

        <include
            android:id="@+id/row_za_energie_czynna"
            layout="@layout/tauron_components_table_row" />

        <include
            android:id="@+id/row_za_energie_czynna2"
            layout="@layout/tauron_components_table_row" />

        <include
            android:id="@+id/row_oplata_handlowa"
            layout="@layout/tauron_components_table_row" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/underline" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Dystrybucja energii"
                tools:ignore="HardcodedText"/>
        </TableRow>

        <include
            android:id="@+id/row_oplata_dyst_zm"
            layout="@layout/tauron_components_table_row" />

        <include
            android:id="@+id/row_oplata_dyst_zm2"
            layout="@layout/tauron_components_table_row" />

        <include
            android:id="@+id/row_oplata_oze"
            layout="@layout/tauron_components_table_row" />

        <include
            android:id="@+id/row_oplata_oze2"
            layout="@layout/tauron_components_table_row" />

        <include
            android:id="@+id/row_oplata_dyst_stala"
            layout="@layout/tauron_components_table_row" />

        <include
            android:id="@+id/row_oplata_przejsciowa"
            layout="@layout/tauron_components_table_row" />

        <include
            android:id="@+id/row_oplata_abonamentowa"
            layout="@layout/tauron_components_table_row" />

        <include
            android:id="@+id/row_sum"
            layout="@layout/tauron_components_table_sum" />

    </TableLayout>

</merge>