<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <ListPreference
        android:key="preferences_tauron_tariff"
        android:title="@string/settings_tauron_tariff"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:entryValues="@array/preferences_energy_tariff_values"
        android:entries="@array/energy_tariff_picks"
        android:summary="@string/energy_tariff_G11_in_preferences"
        android:defaultValue="@string/energy_tariff_G11_in_preferences" />

    <EditTextPreference
        android:key="energiaElektrycznaCzynna"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:dialogMessage="@string/za_energie_czynna_desc"
        android:title="@string/tauron_energia_elektryczna" />

    <EditTextPreference
        android:key="oplataOze"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:dialogMessage="@string/oplata_oze_desc"
        android:title="@string/oplata_oze" />

    <EditTextPreference
        android:key="oplataDystrybucyjnaZmienna"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:dialogMessage="@string/oplata_sieciowa_desc"
        android:title="@string/tauron_oplata_dyst_zmienna" />

    <EditTextPreference
        android:key="oplataDystrybucyjnaStala"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:dialogMessage="@string/oplata_stala_za_przesyl_desc"
        android:title="@string/tauron_oplata_dyst_stala" />

    <EditTextPreference
        android:key="oplataPrzejsciowa"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:dialogMessage="@string/oplata_przejsciowa_desc"
        android:title="@string/tauron_oplata_przejsciowa" />

    <EditTextPreference
        android:key="oplataAbonamentowa"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:dialogMessage="@string/oplata_abonamentowa_desc"
        android:title="@string/tauron_oplata_abonamentowa" />

</PreferenceScreen>