<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_edit"
        android:title="@string/settings_label"/>

    <item
        android:id="@+id/action_history"
        android:orderInCategory="101"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_archive"
        android:title="@string/history_label"/>
    
    <item
        android:id="@+id/action_about"
        android:orderInCategory="200"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_about"
        android:title="@string/about_label"/>

</menu>
